--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html >
 <head>
+  <!-- Todo lo que queremos que se carge en la cache del navegador,
+       esta definido en esta parte-->
   <meta charset="UTF-8">
-  <title>Super Simple Bootstrap Responsive Timeline</title>
+  <title>Super Simple Bootstrap Responsive Ti</title>
   
   
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.0/css/bootstrap.css'>
@@ -14,8 +16,11 @@
 </head>
 
 <body>
+    <!-- Todo las etiquetas a presentar al usaurio las de finimos en esta parte del body-->
+
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  
 <ul class="timeline">
     <li>
         <div class="timeline-badge">
